--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
 
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -45,15 +46,16 @@
                         maionese da casa.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 15.50</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn"><i
-                                class="fa fa-cart-plus text-lg  text-white" data-name="Hamburguer Smash"
-                                data-price="15.50"></i></button>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hamburguer Smash"
+                        data-price="15.50" data-src="./assets/hamb-1.png"><i
+                                class="fa fa-cart-plus text-lg  text-white" ></i></button>
                     </div>
                 </div>
             </div>
+            
 
             <div class="flex gap-2">
-                <img src="./assets/hamb-2.png" alt="Hamburguer Duplo"
+                <img src="./assets/hamb-5.png" alt="Hamburguer Duplo"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300">
                 <div>
                     <p class="font-bold">Hamburguer Duplo</p>
@@ -61,14 +63,14 @@
                         maionese da casa.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 25.30</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn"><i
-                                class="fa fa-cart-plus text-lg  text-white" data-name="Hamburguer Smash"
-                                data-price="15.50"></i></button>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hamburguer Duplo"
+                        data-price="25.30" data-src="./assets/hamb-2.png"><i
+                                class="fa fa-cart-plus text-lg  text-white" ></i></button>
                     </div>
                 </div>
             </div>
             <div class="flex gap-2">
-                <img src="./assets/hamb-3.png" alt="Hamburguer Salad"
+                <img src="./assets/hamb-7.png" alt="Hamburguer Salad"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300">
                 <div>
                     <p class="font-bold">Hamburguer Salad</p>
@@ -76,9 +78,9 @@
                         maionese da casa.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 30.20</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn"><i
-                                class="fa fa-cart-plus text-lg  text-white" data-name="Hamburguer Salad"
-                                data-price="30.20"></i></button>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hamburguer Salad"
+                        data-price="30.20" data-src="./assets/hamb-3.png"><i
+                                class="fa fa-cart-plus text-lg  text-white" ></i></button>
                     </div>
                 </div>
             </div>
@@ -91,12 +93,72 @@
                         maionese da casa.</p>
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 20.00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn"><i
-                                class="fa fa-cart-plus text-lg  text-white" data-name="Hamburguer da casa"
-                                data-price="20.00"></i></button>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hamburguer da casa"
+                        data-price="20.00" data-src="./assets/hamb-4.png"><i
+                                class="fa fa-cart-plus text-lg  text-white" ></i></button>
                     </div>
                 </div>
             </div>
+            <div class="flex gap-2">
+    <img src="./assets/hamb-8.png" alt="Cheeseburguer Clássico"
+        class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300">
+    <div>
+        <p class="font-bold">Cheeseburguer Clássico</p>
+        <p class="text-sm">Pão brioche, burguer 180g, queijo cheddar, alface, tomate e molho especial da casa.</p>
+        <div class="flex items-center gap-2 justify-between mt-3">
+            <p class="font-bold text-lg">R$ 18.00</p>
+            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Cheeseburguer Clássico"
+            data-price="18.00" data-src="./assets/hamb-2.png"><i
+                    class="fa fa-cart-plus text-lg text-white"></i></button>
+        </div>
+    </div>
+</div>
+
+<div class="flex gap-2">
+    <img src="./assets/hamb-2.png" alt="Hamburguer Bacon Lover"
+        class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300">
+    <div>
+        <p class="font-bold">Hamburguer Bacon Lover</p>
+        <p class="text-sm">Pão australiano, burguer 200g, queijo suíço, bacon crocante e barbecue.</p>
+        <div class="flex items-center gap-2 justify-between mt-3">
+            <p class="font-bold text-lg">R$ 20.50</p>
+            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hamburguer Bacon Lover"
+            data-price="20.50" data-src="./assets/hamb-3.png"><i
+                    class="fa fa-cart-plus text-lg text-white"></i></button>
+        </div>
+    </div>
+</div>
+
+<div class="flex gap-2">
+    <img src="./assets/hamb-3.png" alt="Hamburguer Vegano"
+        class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300">
+    <div>
+        <p class="font-bold">Hamburguer Vegano</p>
+        <p class="text-sm">Pão de batata doce, burguer de grão de bico, rúcula, tomate seco e maionese de abacate.</p>
+        <div class="flex items-center gap-2 justify-between mt-3">
+            <p class="font-bold text-lg">R$ 17.50</p>
+            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hamburguer Vegano"
+            data-price="17.50" data-src="./assets/hamb-4.png"><i
+                    class="fa fa-cart-plus text-lg text-white"></i></button>
+        </div>
+    </div>
+</div>
+
+<div class="flex gap-2">
+    <img src="./assets/hamb-6.png" alt="Hamburguer Picante"
+        class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300">
+    <div>
+        <p class="font-bold">Hamburguer Picante</p>
+        <p class="text-sm">Pão brioche, burguer 180g, queijo pepper jack, jalapeños e molho chipotle.</p>
+        <div class="flex items-center gap-2 justify-between mt-3">
+            <p class="font-bold text-lg">R$ 19.00</p>
+            <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Hamburguer Picante"
+            data-price="19.00" data-src="./assets/hamb-5.png"><i
+                    class="fa fa-cart-plus text-lg text-white"></i></button>
+        </div>
+    </div>
+</div>
+
 
         </main>
 
@@ -114,12 +176,13 @@
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 6.00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn"><i
-                                class="fa fa-cart-plus text-lg  text-white" data-name="Coca lata"
-                                data-price="6.00"></i></button>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Coca lata"
+                        data-price="6.00" data-src="./assets/refri-1.png"><i
+                                class="fa fa-cart-plus text-lg  text-white" ></i></button>
                     </div>
                 </div>
             </div>
+            
             <div class="flex gap-2 w-full">
                 <img src="./assets/refri-2.png" alt="Hamburguer da casa"
                     class="w-28 h-28 rounded-md hover:scale-110 hover:rotate-2 duration-300">
@@ -128,9 +191,9 @@
 
                     <div class="flex items-center gap-2 justify-between mt-3">
                         <p class="font-bold text-lg">R$ 6.00</p>
-                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn"><i
-                                class="fa fa-cart-plus text-lg  text-white" data-name="Guaranálata"
-                                data-price="6.00"></i></button>
+                        <button class="bg-gray-900 px-5 rounded add-to-cart-btn" data-name="Guaraná lata"
+                        data-price="6.00" data-src="./assets/refri-2.png"><i
+                                class="fa fa-cart-plus text-lg  text-white" ></i></button>
                     </div>
                 </div>
             </div>
@@ -140,7 +203,7 @@
 
     </div>
 
-    <div class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99]  items-center justify-center hidden">
+    <div class="bg-black/60 w-full h-full fixed top-0 left-0 z-[99]  items-center justify-center hidden overflow-auto" id="cart-modal">
         <div class="bg-white p-5 rounded-md min-w-[90%] md:min-w-[600px]">
             <h2 class="text-center font-bold text-2xl mb-2">Meu carrinho</h2>
 
@@ -168,5 +231,6 @@
     </footer>
 
 </body>
-
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
+<script src="script.js"></script>
 </html>
