--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
         integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <meta property="og:type" content="website"/>
+    <meta property="og:title" content="Burger Haven - O melhor da cidade"/>
+    <meta property="og:image" content="https://carloshekj.github.io/hamburgueria/assets/logo.png"/>
+    <meta property="og:description" content="O melhor hamburguer caseiro de verdade!"/>
+    <meta property="og:site_name" content="Burgur Haven"/>
     <link rel="stylesheet" href="./styles/output.css">
     <title>Burger Haven!</title>
 </head>
