--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Burger Haven - O melhor da cidade"/>
-    <meta property="og:image" content="https://carloshekj.github.io/hamburgueria/assets/logo.png"/>
+    <meta property="og:image" content="https://raw.githubusercontent.com/CarlosHeKj/hamburgueria/main/assets/logo.png"/>
     <meta property="og:description" content="O melhor hamburguer caseiro de verdade!"/>
     <meta property="og:site_name" content="Burgur Haven"/>
     <link rel="stylesheet" href="./styles/output.css">
